Page Design Done. Before Testing Write-Up.

--- a/article.html
+++ b/article.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/style_article.css">
     <!--SITE LOGO-->
     <title>Article | NeuroGen</title>
@@ -53,7 +54,7 @@
         <h3>Have you heard of Noopept?</h3>
         <p>Noopept is a synthetic nootropic compound that was first introduced as a treatment for cognitive impairments and neurodegenerative diseases such as Alzheimer's and Parkinson's disease.
         Noopept has gained popularity as a cognitive enhancer and is widely used for its purported memory-boosting and mood-enhancing effects.
-        Here are some key findings from research on Noopept:
+        <br><br>Here are some key findings from research on Noopept:
 <br>
 <br>
         <li><b>Cognitive Enhancement:</b> Several studies have found that Noopept may enhance cognitive function and memory in both healthy individuals and those with cognitive impairments. For example, a 2013 study published in the Journal of Psychopharmacology found that Noopept improved memory and attention in healthy adult volunteers.</li>
