--- a/resources.html
+++ b/resources.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/style_resources.css">
     <title>Resources | NeuroGen</title>
 </head>
@@ -29,14 +30,6 @@
 <video src="assets/media/video/video-1.mp4" class="landing-video" autoplay loop muted></video>
 <div class="landing-overlay"></div>
 
-<!-- IMAGE BG -->
-<div class="landing-image-container">
-    <div class="landing-image">
-    <img src="assets/media/img/landing_img_1.png" alt="Landing Image">
-    </div>
-    <div class="landing-image-overlay"></div>
-</div>
-
 <!-- LANDING TEXT  -->
 <div class="landing-text">
     <h2>Enhance Your Brain.</h2>
@@ -46,28 +39,24 @@
 <!-- RESOURCES SECTION -->
     <!-- POST 1 -->
 <div class="blog-container">
-    <article class="blog-post">
-        <h2>Games</h2>
-        <a href="https://www.verywellmind.com/top-websites-and-games-for-brain-exercise-2224140"><img src="./assets/media/img/box_img_2.png" alt="Box Image 2"></a>
+    <a href="https://www.verywellmind.com/top-websites-and-games-for-brain-exercise-2224140"><article class="blog-post">
+       <h2>Games</h2><img src="./assets/media/img/box_img_2.png" alt="Box Image 2">
         <p>Games for your brain!</p> 
-    </article>
+    </article></a>
 
     <!-- POST 2 -->
-      <article class="blog-post-2">
-        <h2>Nootropics</h2> 
-        <a href="https://nootropicsexpert.com/nootropics-guide/"><img src="./assets/media/img/box_img_1.jpg" alt="Box Image 1"></a> 
-        <p>Learn about Nootropics!</p> 
-    
-    
-    </article>
+    <a href="https://nootropicsexpert.com/nootropics-guide/"><article class="blog-post-2">
+        <h2>Nootropics</h2><img src="./assets/media/img/box_img_1.jpg" alt="Box Image 1">
+        <p>Learn about nootropics!</p> 
+    </article></a> 
 
     <!-- POST 3 -->
-      <article class="blog-post-3">
-        <h2>Books</h2>
-        <a href="https://www.goodreads.com/search?q=Nootropics&qid="><img src="./assets/media/img/box_img_3.jpg" alt="Box Image 3"></a>
-         <p>Explore curated collections!</p>
-    </article>
+    <a href="https://www.goodreads.com/search?q=Nootropics&qid="><article class="blog-post-3">
+       <h2>Books</h2><img src="./assets/media/img/box_img_3.jpg" alt="Box Image 3">
+         <p>Explore collections!</p>
+    </article></a>
 </div>
+
 
 
 <!-- FOOTER -->
