Before: CSS Clean Up #2

--- a/404.html
+++ b/404.html
@@ -5,61 +5,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style_404.css">
-    <title>NeuroGen | 404</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style_404.css">
+    <title>404 | NeuroGen</title>
 </head>
 <body>
 
 <!-- HEADER: START -->
 <header>
-    <div id="branding">
-    <h1><a href="index.html">NeuroGen™</a></h1></div>
-     <!--404 MESSAGE-->
-     <h2>404 - Page Not Found</h2>
-     <p>Sorry, the page you were looking for could not be found.</p>
+    <div class="header-container">
+        <div id="branding">
+            <h1><a class="logotype" href="index.html">NeuroGen</a></h1>
+        </div>
+
+      
+        <!-- VIDEO BG -->
+<div class="video-container">
+    <video src="assets/media/video/video-1.mp4" class="landing-video" autoplay loop muted></video>
+    <div class="landing-overlay"></div>
+    </div>
+</div>
 </header>
 <!-- HEADER: END-->
-
-<!--SECTION: SHOWCASE-->
-
-<!--Video-->
-    <video src="img/video-1.mp4" class="landing-video" autoplay loop muted></video>
-<!--Video Overlay-->
-    <div class="landing-overlay"></div>
-
-<!--FOOTER-->
-<footer class="container-fluid">
+  <!--404 MESSAGE-->
+  <div class="error-message">
+  <h2>404 - Page Not Found</h2>
+  <p>Sorry, the page you were looking for could not be found.</p>
+</div>
+  <!-- FOOTER -->
+<footer class="footer-container">
     <div id="footer-details" class="row">
-
         <div class="col-sm-4">
             <ul class="list-inline social-links">
-                <li class="list-inline-item">
+                <li class="list-item">
                     <a target="_blank" href="https://www.facebook.com/sirak.dev/">
-                        <i class="fab fa-facebook" aria-hidden="true"></i>
+                        <i class="iconez fab fa-facebook" aria-hidden="true"></i>
                         <span class="sr-only">Facebook</span>
                     </a>
                 </li>
-                <li class="list-inline-item">
+                <li class="list-item">
                     <a target="_blank" href="https://twitter.com/sirak_dev">
-                        <i class="fab fa-twitter" aria-hidden="true"></i>
+                        <i class="iconez fab fa-twitter" aria-hidden="true"></i>
                         <span class="sr-only">Twitter</span>
                     </a>
                 </li>
-                <li class="list-inline-item">
+                <li class="list-item">
                     <a target="_blank" href="https://www.linkedin.com/in/sirak-k-a203b1156/">
-                        <i class="fab fa-linkedin" aria-hidden="true"></i>
+                        <i class="iconez fab fa-linkedin" aria-hidden="true"></i>
                         <span class="sr-only">LinkedIn</span>
                     </a>
                 </li>
-                <li class="list-inline-item">
+                <li class="list-item">
                     <a target="_blank" href="https://www.pinterest.se/sirakdev/">
-                        <i class="fab fa-pinterest" aria-hidden="true"></i>
+                        <i class="iconez fab fa-pinterest" aria-hidden="true"></i>
                         <span class="sr-only">Pinterest</span>
                     </a>
                 </li>
-                <li class="list-inline-item">
+                <li class="list-item">
                     <a target="_blank" href="https://www.instagram.com/sirak.dev/">
-                        <i class="fab fa-instagram" aria-hidden="true"></i>
+                        <i class="iconez fab fa-instagram" aria-hidden="true"></i>
                         <span class="sr-only">Instagram</span>
                     </a>
                 </li>
