--- a/index.html
+++ b/index.html
@@ -22,20 +22,22 @@
         <li><a href="resources.html">Resources</a></li>
         <li><a href="contact.html">Contact</a></li>
         </ul></nav>
+        <!-- VIDEO BG -->
+<div class="video-container">
+    <video src="assets/media/video/video-1.mp4" class="landing-video" autoplay loop muted></video>
+    <div class="landing-overlay"></div>
     </div>
+</div>
 </header>
 <!-- HEADER: END-->
 
-<!-- VIDEO BG -->
-    <video src="assets/media/video/video-1.mp4" class="landing-video" autoplay loop muted></video>
-    <div class="landing-overlay"></div>
-    
+
 <!-- IMAGE BG -->
 <div class="landing-image-container">
     <div class="landing-image">
     <img src="assets/media/img/landing_img_1.png" alt="Landing Image">
     </div>
-    <div class="landing-image-overlay"></div>
+    <!-- <div class="landing-image-overlay"></div> -->
 </div>
 
 <!-- LANDING TEXT  -->
@@ -76,7 +78,7 @@
 <div class="newsletter-container">
 <div class="newsletter">
     <h3>Subscribe To Our Newsletter</h3>
-    <form id="formEmail" method="POST" action="https://formdump.codeinstitute.net">
+    <form id="formEmail" method="POST" action="https://formdump.codeinstitute.net/">
         <input type="email" id="email-form" name="Email" placeholder="Enter Email..." required>
         <button type="submit" class="form-button" onclick="audio.play();">Subscribe</button>
         <script>
