--- a/resources.html
+++ b/resources.html
@@ -22,13 +22,14 @@
         <li class="current"><a href="resources.html">Resources</a></li>
         <li><a href="contact.html">Contact</a></li>
         </ul></nav>
-    </div>
-</header>
+        <!-- VIDEO BG -->
+        <div class="video-container">
+            <video src="assets/media/video/video-1.mp4" class="landing-video" autoplay loop muted></video>
+            <div class="landing-overlay"></div>
+            </div>
+        </div>
+        </header>
 <!-- HEADER: END-->
-
-<!-- VIDEO BG -->
-<video src="assets/media/video/video-1.mp4" class="landing-video" autoplay loop muted></video>
-<div class="landing-overlay"></div>
 
 <!-- LANDING TEXT  -->
 <div class="landing-text">
@@ -53,7 +54,7 @@
     <!-- POST 3 -->
     <a href="https://www.goodreads.com/search?q=Nootropics&qid="><article class="blog-post-3">
        <h2>Books</h2><img src="./assets/media/img/box_img_3.jpg" alt="Box Image 3">
-         <p>Explore collections!</p>
+         <p>Explore!</p>
     </article></a>
 </div>
 
