--- a/article.html
+++ b/article.html
@@ -24,7 +24,12 @@
         <li><a href="resources.html">Resources</a></li>
         <li><a href="contact.html">Contact</a></li>
         </ul></nav>
+     <!-- VIDEO BG -->
+<div class="video-container">
+    <video src="assets/media/video/video-1.mp4" class="landing-video" autoplay loop muted></video>
+    <div class="landing-overlay"></div>
     </div>
+</div>
 </header>
 <!-- HEADER: END-->
 
