--- a/contact.html
+++ b/contact.html
@@ -22,13 +22,14 @@
         <li><a href="resources.html">Resources</a></li>
         <li class="current"><a href="contact.html" >Contact</a></li>
         </ul></nav>
-    </div>
-</header>
-<!-- HEADER: END-->
-
-<!-- CONTACT PAGE: VIDEO BG -->
+ <!-- VIDEO BG -->
+ <div class="video-container">
     <video src="assets/media/video/video-1.mp4" class="landing-video" autoplay loop muted></video>
     <div class="landing-overlay"></div>
+    </div>
+</div>
+</header>
+<!-- HEADER: END-->
 
 <!-- LANDING TEXT  -->
 <div class="landing-text">
