Validation: minor Syntax Fix

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         <h3>Have you heard of Noopept?</h3>
         <p>Noopept is a synthetic nootropic compound that was first introduced as a treatment for cognitive impairments and neurodegenerative diseases such as Alzheimer's and Parkinson's disease.
         Noopept has gained popularity as a cognitive enhancer and is widely used for its purported memory-boosting and mood-enhancing effects.</p>
-        <div class="read-more"><a href="./article.html">Read More</a>
- 
+        <div class="read-more"><a href="./article.html">Read More</a></div>
       </article>
+
       <article class="blog-post-2">
         <img src="./assets/media/img/post_img_2.jpg" alt="Blog Post 2 Image">
         <h3>What is Alpha-GPC?</h3>
@@ -64,6 +64,7 @@
             Studies have shown that Alpha-GPC supplementation can improve cognitive function and memory in both young and older adults, and may also have neuroprotective effects.</p>
         <div><a href="https://en.wikipedia.org/wiki/Alpha-GPC">Read More</a></div>
       </article>
+
       <article class="blog-post-3">
         <img src="./assets/media/img/post_img_3.jpg" alt="Blog Post 3 Image">
         <h3>The pros and cons of Racetams</h3>
