--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
         <link rel="stylesheet" href="./assets/css/style.css">
-        <!--SITE LOGO-->
         <title>Home | NeuroGen</title>
 </head>
 <body>
 
-<!-- HEADER: START -->
+<!-- HEADER-->
 <header>
     <div class="header-container">
+        <!--SITE LOGO-->
         <div id="branding">
-            <h1><a class="logotype" href="index.html">NeuroGen</a></h1>
+        <h1><a class="logotype" href="index.html">NeuroGen</a></h1>
         </div>
         <!-- NAVBAR--> 
         <nav class="navbar"><ul>
@@ -23,21 +23,18 @@
         <li><a href="contact.html">Contact</a></li>
         </ul></nav>
         <!-- VIDEO BG -->
-<div class="video-container">
-    <video src="assets/media/video/video-1.mp4" class="landing-video" autoplay loop muted></video>
-    <div class="landing-overlay"></div>
+        <div class="video-container">
+        <video src="assets/media/video/video-1.mp4" class="landing-video" autoplay loop muted></video>
+        <div class="landing-overlay"></div>
+        </div>
     </div>
-</div>
 </header>
-<!-- HEADER: END-->
-
 
 <!-- IMAGE BG -->
 <div class="landing-image-container">
     <div class="landing-image">
     <img src="assets/media/img/landing_img_1.png" alt="Landing Image">
     </div>
-    <!-- <div class="landing-image-overlay"></div> -->
 </div>
 
 <!-- LANDING TEXT  -->
@@ -73,13 +70,12 @@
         <div><a href="https://nootropicsexpert.com/the-top-7-racetams-which-one-is-best/">Read More</a></div>
       </article>
   </div>
-  
 
 <!-- NEWSLETTER: SUBSCRIPTION FORM -->
 <div class="newsletter-container">
 <div class="newsletter">
     <h3>Subscribe To Our Newsletter</h3>
-    <form id="formEmail" method="POST" action="https://formdump.codeinstitute.net/">
+    <form id="formEmail-1" method="POST" action="https://formdump.codeinstitute.net/">
         <input type="email" id="email-form" name="Email" placeholder="Enter Email..." required>
         <button type="submit" class="form-button" onclick="audio.play();">Subscribe</button>
         <script>
@@ -88,8 +84,7 @@
     </form>
 </div>
 </div>
-
-      
+    
 <!-- FOOTER -->
 <footer class="footer-container">
     <div id="footer-details" class="row">
@@ -129,8 +124,6 @@
         </div>
     </div>
 </footer>
-
-
 
 </body>
 </html>
