Add HTML Semantic Tags & Workspace Clean Up, 404

--- a/error-page.html
+++ b/error-page.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/style_404.css">
+    <link rel="stylesheet" href="/assets/css/style_error.css">
     <title>404 | NeuroGen</title>
 </head>
 <body>
