--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </div>
 
 <!-- BLOG SECTION -->
-<div class="blog-container">
+<section class="blog-container">
       <article class="blog-post">
         <h4>Latest Article</h4>
         <img src="./assets/media/img/post_img_1.jpg" alt="Blog Post 1 Image">
@@ -69,10 +69,10 @@
             The mechanism of action of Racetams is not well understood and their long-term effects are not fully known. Racetams are not regulated by the FDA and their quality and purity may vary between different suppliers.</p>
         <div><a href="https://nootropicsexpert.com/the-top-7-racetams-which-one-is-best/">Read More</a></div>
       </article>
-  </div>
+  </section>
 
 <!-- NEWSLETTER: SUBSCRIPTION FORM -->
-<div class="newsletter-container">
+<section class="newsletter-container">
 <div class="newsletter">
     <h3>Subscribe To Our Newsletter</h3>
     <form id="formEmail-1" method="POST" action="https://formdump.codeinstitute.net/">
@@ -83,7 +83,7 @@
         </script>
     </form>
 </div>
-</div>
+</section>
     
 <!-- FOOTER -->
 <footer class="footer-container">
@@ -92,31 +92,31 @@
             <ul class="list-inline social-links">
                 <li class="list-item">
                     <a target="_blank" href="https://www.facebook.com/sirak.dev/">
-                        <i class="iconez fab fa-facebook" aria-hidden="true"></i>
+                        <i class="fab fa-facebook" aria-hidden="true"></i>
                         <span class="sr-only">Facebook</span>
                     </a>
                 </li>
                 <li class="list-item">
                     <a target="_blank" href="https://twitter.com/sirak_dev">
-                        <i class="iconez fab fa-twitter" aria-hidden="true"></i>
+                        <i class="fab fa-twitter" aria-hidden="true"></i>
                         <span class="sr-only">Twitter</span>
                     </a>
                 </li>
                 <li class="list-item">
                     <a target="_blank" href="https://www.linkedin.com/in/sirak-k-a203b1156/">
-                        <i class="iconez fab fa-linkedin" aria-hidden="true"></i>
+                        <i class="fab fa-linkedin" aria-hidden="true"></i>
                         <span class="sr-only">LinkedIn</span>
                     </a>
                 </li>
                 <li class="list-item">
                     <a target="_blank" href="https://www.pinterest.se/sirakdev/">
-                        <i class="iconez fab fa-pinterest" aria-hidden="true"></i>
+                        <i class="fab fa-pinterest" aria-hidden="true"></i>
                         <span class="sr-only">Pinterest</span>
                     </a>
                 </li>
                 <li class="list-item">
                     <a target="_blank" href="https://www.instagram.com/sirak.dev/">
-                        <i class="iconez fab fa-instagram" aria-hidden="true"></i>
+                        <i class="fab fa-instagram" aria-hidden="true"></i>
                         <span class="sr-only">Instagram</span>
                     </a>
                 </li>
