--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 </header>
 
 <!-- IMAGE BG -->
-<container class="landing-image-container">
+<div class="landing-image-container">
     <div class="landing-image">
     <img src="assets/media/img/landing_img_1.png" alt="Landing Image">
     </div>
-</container>
+</div>
 
 <!-- LANDING TEXT  -->
 <div class="landing-text">
@@ -45,7 +45,6 @@
 
 <!-- BLOG SECTION -->
 <section class="blog-container">
-    
       <article class="blog-post">
         <h4>Latest Article</h4>
         <img src="./assets/media/img/post_img_1.jpg" alt="Blog Post 1 Image">
