Clean Code: Remove Redundant Spacing and Comments

--- a/article.html
+++ b/article.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     
-<!-- HEADER: START -->
+<!-- HEADER -->
 <header>
     <div class="header-container">
         <div id="branding">
@@ -31,7 +31,6 @@
         </div>
     </div>
 </header>
-<!-- HEADER: END-->
 
 <!-- VIDEO BG -->
     <video src="assets/media/video/video-1.mp4" class="landing-video" autoplay loop muted></video>
