--- a/error-page.html
+++ b/error-page.html
@@ -11,14 +11,12 @@
 </head>
 <body>
 
-<!-- HEADER: START -->
+<!-- HEADER -->
 <header>
     <div class="header-container">
         <div id="branding">
             <h1><a class="logotype" href="index.html">NeuroGen</a></h1>
         </div>
-
-      
         <!-- VIDEO BG -->
 <div class="video-container">
     <video src="assets/media/video/video-1.mp4" class="landing-video" autoplay loop muted></video>
@@ -26,12 +24,13 @@
     </div>
 </div>
 </header>
-<!-- HEADER: END-->
+
   <!--404 MESSAGE-->
   <div class="error-message">
   <h2>404 - Page Not Found</h2>
   <p>Sorry, the page you were looking for could not be found.</p>
 </div>
+
   <!-- FOOTER -->
 <footer class="footer-container">
     <div id="footer-details" class="row">
