--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
     <h3>Contact Us</h3>
         <form id="formEmail-2" method="POST" action="https://formdump.codeinstitute.net">
         <input type="email" id="contact-form-email" name="Email" placeholder="Enter Email..." required>
-        <textarea id="contact-form-text" name="Message" placeholder="Write a Message..." required></textarea>
+        <textarea id="contact-form-text" name="Message" placeholder="Write a Message..."></textarea>
         <button type="submit" class="form-button" onclick="audio.play();">Send</button>
         <script>
             const audio = new Audio (); audio.src="./assets/media/audio/click_sound.mp3"
