Remove All Videos

--- a/index.html
+++ b/index.html
@@ -22,11 +22,6 @@
         <li><a href="resources.html">Resources</a></li>
         <li><a href="contact.html">Contact</a></li>
         </ul></nav>
-        <!-- VIDEO BG -->
-        <div class="video-container">
-        <video src="assets/media/video/video-1.mp4" class="landing-video" autoplay loop muted></video>
-        <div class="landing-overlay"></div>
-        </div>
     </div>
 </header>
 
@@ -59,7 +54,7 @@
         <h3>What is Alpha-GPC?</h3>
         <p>Did you know that Alpha-GPC can be found in the brain? This is a natural choline compound that can be found in the brain and is also available as a dietary supplement.
             Studies have shown that Alpha-GPC supplementation can improve cognitive function and memory in both young and older adults, and may also have neuroprotective effects.</p>
-        <div><a href="https://en.wikipedia.org/wiki/Alpha-GPC">Read More</a></div>
+        <div><a target="_blank" href="https://en.wikipedia.org/wiki/Alpha-GPC">Read More</a></div>
       </article>
 
       <article class="blog-post-3">
@@ -67,7 +62,7 @@
         <h3>The pros and cons of Racetams</h3>
         <p>Racetams are a family of nootropic compounds that have been shown to improve cognitive function, memory, and focus.  
             The mechanism of action of Racetams is not well understood and their long-term effects are not fully known. Racetams are not regulated by the FDA and their quality and purity may vary between different suppliers.</p>
-        <div><a href="https://nootropicsexpert.com/the-top-7-racetams-which-one-is-best/">Read More</a></div>
+        <div><a target="_blank"  href="https://nootropicsexpert.com/the-top-7-racetams-which-one-is-best/">Read More</a></div>
       </article>
   </section>
 
