--- a/resources.html
+++ b/resources.html
@@ -23,11 +23,6 @@
         <li class="current"><a href="resources.html">Resources</a></li>
         <li><a href="contact.html">Contact</a></li>
         </ul></nav>
-        <!-- VIDEO BG -->
-        <div class="video-container">
-        <video src="assets/media/video/video-1.mp4" class="landing-video" autoplay loop muted></video>
-        <div class="landing-overlay"></div>
-        </div>
     </div>
 </header>
 
@@ -40,17 +35,17 @@
 <!-- RESOURCES SECTION -->
 <section class="blog-container">
     
-    <a href="https://www.verywellmind.com/top-websites-and-games-for-brain-exercise-2224140">
+    <a target="_blank" href="https://www.verywellmind.com/top-websites-and-games-for-brain-exercise-2224140">
     <article class="blog-post">
        <h2>Games</h2><img src="./assets/media/img/box_img_2.png" alt="Box Image 2">
         <p>Games for your brain!</p></article></a>
 
-    <a href="https://nootropicsexpert.com/nootropics-guide/">
+    <a target="_blank" href="https://nootropicsexpert.com/nootropics-guide/">
     <article class="blog-post-2">
         <h2>Nootropics</h2><img src="./assets/media/img/box_img_1.jpg" alt="Box Image 1">
         <p>Learn about nootropics!</p></article></a> 
 
-    <a href="https://www.goodreads.com/search?q=Nootropics&qid=">
+    <a target="_blank" href="https://www.goodreads.com/search?q=Nootropics&qid=">
     <article class="blog-post-3">
        <h2>Books</h2><img src="./assets/media/img/box_img_3.jpg" alt="Box Image 3">
          <p>Explore!</p></article></a>
