--- a/article.html
+++ b/article.html
@@ -43,13 +43,14 @@
 
 
 <!-- BLOG SECTION -->
+<div class="blog-container-wrapper">
 <section class="blog-container">
       <article class="blog-post">
         <img src="./assets/media/img/post_img_1.jpg" alt="Blog Post 1 Image">
         <h3>Have you heard of Noopept?</h3>
         <p>Noopept is a synthetic nootropic compound that was first introduced as a treatment for cognitive impairments and neurodegenerative diseases such as Alzheimer's and Parkinson's disease.
         Noopept has gained popularity as a cognitive enhancer and is widely used for its purported memory-boosting and mood-enhancing effects.
-        <br><br>Here are some key findings from research on Noopept:
+        <br>Here are some key findings from research on Noopept:
 <br>
 <br>
         <li><b>Cognitive Enhancement:</b> Several studies have found that Noopept may enhance cognitive function and memory in both healthy individuals and those with cognitive impairments. For example, a 2013 study published in the Journal of Psychopharmacology found that Noopept improved memory and attention in healthy adult volunteers.</li>
@@ -60,6 +61,7 @@
       
     </article>
   </section>
+  </div>
 
 
 
