--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 </div>
 
 <!-- BLOG SECTION -->
+<div class="blog-container-wrapper">
 <section class="blog-container">
       <article class="blog-post">
         <h4>Latest Article</h4>
@@ -65,6 +66,7 @@
         <div><a target="_blank"  href="https://nootropicsexpert.com/the-top-7-racetams-which-one-is-best/">Read More</a></div>
       </article>
   </section>
+</div>
 
 <!-- NEWSLETTER: SUBSCRIPTION FORM -->
 <section class="newsletter-container">
