--- a/resources.html
+++ b/resources.html
@@ -33,23 +33,25 @@
 </div>
 
 <!-- RESOURCES SECTION -->
+<div class="blog-container-wrapper">
 <section class="blog-container">
     
-    <a target="_blank" href="https://www.verywellmind.com/top-websites-and-games-for-brain-exercise-2224140">
     <article class="blog-post">
+    <a target="_blank" href="https://www.verywellmind.com/top-websites-and-games-for-brain-exercise-2224140">
        <h2>Games</h2><img src="./assets/media/img/box_img_2.png" alt="Box Image 2">
         <p>Games for your brain!</p></article></a>
 
+        <article class="blog-post-2">
     <a target="_blank" href="https://nootropicsexpert.com/nootropics-guide/">
-    <article class="blog-post-2">
         <h2>Nootropics</h2><img src="./assets/media/img/box_img_1.jpg" alt="Box Image 1">
         <p>Learn about nootropics!</p></article></a> 
 
+        <article class="blog-post-3">
     <a target="_blank" href="https://www.goodreads.com/search?q=Nootropics&qid=">
-    <article class="blog-post-3">
        <h2>Books</h2><img src="./assets/media/img/box_img_3.jpg" alt="Box Image 3">
          <p>Explore!</p></article></a>
 </section>
+</div>
 
 <!-- FOOTER -->
 <footer class="footer-container">
