Adjust header-container on Smaller Devices

--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,7 @@
 
 
 <!-- NEWSLETTER: SUBSCRIPTION FORM -->
+<container class="forms-container-wrapper">
 <section class="newsletter-container">
     <div class="newsletter-form">
         <h3>Subscribe To Our Newsletter</h3>
@@ -62,6 +63,7 @@
     </form>
 </div>
 </section>
+</container>
 
 <!-- FOOTER -->
 <footer class="footer-container">
