--- a/index.html
+++ b/index.html
@@ -32,14 +32,10 @@
     </div>
 </div>
 
-<!-- LANDING TEXT  -->
-<div class="landing-text">
-    <h2>Enhance Your Brain.</h2>
-    <h2>Enhance Your Life.</h2>
-</div>
+
 
 <!-- BLOG SECTION -->
-<div class="blog-container-wrapper">
+<container class="blog-container-wrapper">
 <section class="blog-container">
       <article class="blog-post">
         <h4>Latest Article</h4>
@@ -66,8 +62,12 @@
         <div><a target="_blank"  href="https://nootropicsexpert.com/the-top-7-racetams-which-one-is-best/">Read More</a></div>
       </article>
   </section>
+</container>
+<!-- LANDING TEXT  -->
+<div class="landing-text">
+    <h2>Enhance Your Brain.</h2>
+    <h2>Enhance Your Life.</h2>
 </div>
-
 <!-- NEWSLETTER: SUBSCRIPTION FORM -->
 <section class="newsletter-container">
 <div class="newsletter">
