Final Refactoring: Desktop All Pages

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 </header>
 
 <!-- IMAGE BG -->
-<div class="landing-image-container">
+<container class="landing-image-container">
     <div class="landing-image">
     <img src="assets/media/img/landing_img_1.png" alt="Landing Image">
     </div>
-</div>
+</container>
 
 
 
